# workshop

./: .env  README.md  main.py  pyproject.toml
.github/workflows/: code_quality_pipeline.md  code_quality_pipeline.yml
docs/: architecture.md
rag/data/: README.md  fairy_tale_rag.md
rag/data/fairy_tale_rag_chunks/: chunk_01.md  chunk_02.md  chunk_03.md  chunk_04.md  chunk_05.md  chunk_06.md  chunk_07.md
scripts/: run_check.bat  run_check.sh
src/agentic_chat/: __init__.py
src/agentic_chat/app/: __init__.py  entrypoint.py  terminal.py  web.py
src/agentic_chat/core/: config.py  modes.py
src/agentic_chat/rag/: __init__.py  bootstrap.py  embeddings.py  pipeline.py
src/agentic_chat/tools/: __init__.py  exa_tool.py  registry.py
src/agentic_chat/ui/: __init__.py
src/agentic_chat/ui/terminal/: __init__.py  chat.py  view.py
src/agentic_chat/ui/web/: __init__.py  streamlit_app.py
src/workshop_cli/: __init__.py  chat.py  cli.py  client.py  config.py  modes.py  ui.py
src/workshop_cli/tools/: __init__.py  datetime_tool.py  registry.py
tests/: test_chat.py  test_client.py  test_config.py  test_entrypoint.py  test_modes.py  test_structure.py  test_terminal.py  test_tools.py  test_web_ui.py
